# complex-spring

./: .gitignore  README.md  experiment.cpp  run.sh
data/: mesh_init
src/: CMakeLists.txt  common.h  main.cpp  mesh.cpp  mesh.h  shader.h  sim.cpp  sim2.cpp  viewer.cpp
src/gen_data/: gen_0.cpp  gen_1.cpp
src/shaders/: shader.fs  shader.vs
